<resources>
    <string name="app_name">Cozo</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Strings for main activity -->
    <string name="permission_message">Access your location is important for your deliverer to know where to deliver your order. We will use this information only for this matter.</string>
    <string name="permission_button_message">Grant Location</string>

    <!-- Strings for cardview -->
    <string name="ratedBy">( %1$d )</string>
    <string name="prepTime">%1$d min</string>
    <string name="card_price">R$ %1$s</string>

    <!-- Strings for partners cardview -->
    <string name="deliv_price">R$ %1$s</string>
    <string name="deliv_time">%1$s min</string>

    <!-- Strings for cart view -->
    <string name="total_label">TOTAL: R$ %1$s</string>
    <string name="default_item_name">nome do prato</string>
    <string name="default_item_quantity">1</string>
    <string name="confirmCart">Ver entregadores</string>

    <!-- Strings for payment activity -->
    <string name="credit_card_number">**** **** **** %1$s</string>

    <!-- Strings for user profile activity -->
    <string name="phone_number">+%1$s (%2$s) %3$s</string>

    <!-- Strings for checkout fragment -->
    <string name="checkout_message">Confirmar entregador</string>
    <string name="checkout_quantity">1</string>
    <string name="fragment_checkout_price">R$ 5,00</string>

    <!-- Strings for fragment_bottom_while_choosing_items.xml -->
    <string name="fragment_bottom_while_choosing_items_button">Escolher entregador</string>
    <string name="fragment_bottom_while_choosing_items_default_price">R$ 1,00</string>
    <string name="fragment_bottom_while_choosing_items_price">R$ %1$s</string>

    <!-- Strings for fragment_bottom_while_choosing_delivery_partner.xml -->
    <string name="fragment_bottom_while_choosing_delivery_partner_button">Confirmar entregador</string>
    <string name="fragment_bottom_while_choosing_delivery_partner_default_price">R$ 1,00</string>
    <string name="fragment_bottom_while_choosing_delivery_partner_price">R$ %1$s</string>

    <!-- Strings for fragment_review_cart_.xml -->
    <string name="fragment_review_cart_title">Sua cesta</string>
    <string name="fragment_review_cart_restaurant_name">Bar Cozo</string>
    <string name="fragment_review_cart_subtotal_label">Subtotal</string>
    <string name="fragment_review_cart_default_price">R$ 1,00</string>
    <string name="fragment_review_cart_price">R$ %1$s</string>
    <string name="fragment_review_cart_button">Escolher entregador</string>

    <!-- Strings for fragment_delivery_partner_details.xml -->
    <string name="fragment_delivery_partner_default_partner_name">João</string>
    <string name="fragment_delivery_partner_notes">Adicione um comentário ao entregador...</string>
    <string name="fragment_delivery_partner_button">Confirmar entregador</string>


    <!-- - - - - - CARD VIEWS - - - - - -->

    <!-- Strings for cardview_address.xml -->
    <string name="cardview_address_label">Seu endereço</string>
    <string name="cardview_address_default_address">Rua do Matão, 747</string>

    <!-- String for cardview_credit_card.xml -->
    <string name="cardview_credit_card_default_credit_card_number">**** **** **** 0123</string>
    <string name="cardview_credit_card_credit_card_number">**** **** **** %1$s</string>
    <string name="cardview_credit_card_default_owner_credit_card_name">João da Silva</string>

    <!-- Strings for cardview_delivery.xml -->
    <string name="cardview_delivery_label">Detalhes da entrega</string>
    <string name="cardview_delivery_default_delivery_partner_name">João da Silva</string>
    <string name="cardview_delivery_default_delivery_time">13min - 31min</string>
    <string name="cardview_delivery_default_delivery_price">R$ 7,50</string>
    <string name="cardview_delivery_delivery_price">R$ %1$s</string>

    <!-- Strings for cardview_order.xml -->
    <string name="cardview_order_default_quantity">1x</string>
    <string name="cardview_order_quantity">%1$sx</string>
    <string name="cardview_order_default_item_name">Nome do pedido</string>
    <string name="cardview_order_default_items_price">R$ 1,00</string>
    <string name="cardview_order_items_price">R$ %1$s</string>
    <string name="cardview_order_hidden_comments">Observação: %1$s</string>

    <!-- Strings for cardview_order_label.xml -->
    <string name="cardview_order_label_label">Sua compra</string>

    <!-- Strings for cardview_preview_delivery.xml -->
    <string name="cardview_preview_delivery_label">Previsão de entrega</string>
    <string name="cardview_preview_delivery_time_label">Tempo:</string>
    <string name="cardview_preview_delivery_time">%1$s - %2$s</string>
    <string name="cardview_preview_default_delivery_time">13min - 31min</string>
    <string name="cardview_preview_delivery_price_label">Preço:</string>
    <string name="cardview_preview_default_delivery_price">R$ 7,50 - R$ 10,00</string>
    <string name="cardview_preview_delivery_price">R$ %1$s - R$ %2$s</string>


    <!-- Strings for activity_cart.xml -->
    <string name="activity_cart_label">Resumo do pedido</string>
    <string name="activity_cart_total_label">Total</string>
    <string name="activity_cart__default_price">R$ 27,50</string>
    <string name="activity_cart_price">R$ %1$s - R$ %2$s</string>
    <string name="activity_cart_button_label">Confirmar pedido</string>

    <!-- Strings for cardview_without_credit_card.xml -->
    <string name="cardview_no_credit_card_label">Método de pagamento</string>
    <string name="cardview_no_credit_card_text">Adicionar método de pagamento</string>

    <!-- Strings for cardview_with_credit_card.xml -->
    <string name="cardview_with_credit_card_default_number">**** **** **** 0123</string>
    <string name="cardview_with_credit_card_number">**** **** **** %1$s</string>
    <string name="cardview_with_credit_card_change_label">Trocar</string>


</resources>

