<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewPreviewDelivery"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:layout_marginBottom="12dp"
    android:layout_alignParentBottom="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_anchorGravity="top">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/previewDeliveryContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="parent">

        <View
            android:id="@+id/previewDeliveryDivider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="0dp"
            android:background="#ababab"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/previewDeliveryLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cardview_preview_delivery_label"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/previewDeliveryDivider" />

        <TextView
            android:id="@+id/previewDeliveryTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/cardview_preview_delivery_time_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/previewDeliveryLabel" />

        <ImageView
            android:id="@+id/previewDeliveryTimeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:contentDescription="TODO"
            android:src="@drawable/outline_info_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/previewDeliveryTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/previewDeliveryTime" />

        <TextView
            android:id="@+id/previewDeliveryTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/cardview_preview_delivery_time"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/previewDeliveryTimeLabel"
            app:layout_constraintEnd_toStartOf="@+id/previewDeliveryTimeInfo"
            app:layout_constraintStart_toEndOf="@+id/previewDeliveryTimeLabel" />

        <TextView
            android:id="@+id/previewDeliveryPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cardview_preview_delivery_price_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/previewDeliveryTimeLabel" />

        <TextView
            android:id="@+id/previewDeliveryPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/cardview_preview_delivery_price"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/previewDeliveryPriceLabel"
            app:layout_constraintEnd_toStartOf="@+id/previewDeliveryPriceInfo"
            app:layout_constraintStart_toEndOf="@+id/previewDeliveryPriceLabel" />

        <ImageView
            android:id="@+id/previewDeliveryPriceInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/outline_info_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/previewDeliveryPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/previewDeliveryPrice"
            android:contentDescription="TODO" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>