<?xml version="1.0" encoding="utf-8"?>
<com.cozo.cozomvp.mainactivity.deliverydetailsfragment.DeliveryDetailsFragment
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/deliveryDetailsContainer"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom">

    <android.support.v7.widget.CardView
        android:id="@+id/deliveryPartnerCardView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:cardCornerRadius="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/deliveryPartnerImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="14dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/deliveryPartnerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:transitionName="titleTransition"
                    tools:text="@string/fragment_delivery_partner_default_partner_name" />

                <EditText
                    android:id="@+id/deliveryPartnerNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:hint="@string/fragment_delivery_partner_notes"
                    android:inputType="text" />

                <Button
                    android:id="@+id/deliveryPartnerConfirmButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/ripple_effect"
                    android:elevation="18dp"
                    android:pointerIcon="arrow"
                    android:text="@string/fragment_delivery_partner_button"
                    android:textColor="@color/white100" />

            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>

</com.cozo.cozomvp.mainactivity.deliverydetailsfragment.DeliveryDetailsFragment>