<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:cardCornerRadius="8dp"
        android:background="@color/white">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/reviewCartMainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EFEFEF">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/reviewCartHeaderAndCorpus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EFEFEF">

                <TextView
                    android:id="@+id/reviewCartTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/ripple_effect"
                    android:text="@string/fragment_review_cart_title"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/reviewCartRestaurantName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/fragment_review_cart_restaurant_name"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reviewCartTitle" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/reviewCartRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/reviewCartRestaurantName" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/reviewCartFooter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#EFEFEF"
                app:layout_constraintTop_toBottomOf="@id/reviewCartHeaderAndCorpus"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/reviewCartSubtotalLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/fragment_review_cart_subtotal_label"
                    android:textColor="@color/cyan_500"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:transitionName="titleTransition"
                    app:layout_constraintBottom_toTopOf="@+id/reviewCartChooseDeliveryPartnerButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/reviewCartPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/fragment_review_cart_default_price"
                    android:textColor="@color/cyan_500"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/reviewCartSubtotalLabel"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/reviewCartChooseDeliveryPartnerButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/ripple_effect"
                    android:elevation="18dp"
                    android:pointerIcon="arrow"
                    android:text="@string/fragment_review_cart_button"
                    android:textColor="@color/white100"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>